# waffle-vm

./: Cargo.toml  file.bc  file.n  file.scm  file.waffle  file.wml
bar/: bar.waffle  bar.wml
crates/cc/: Cargo.toml
crates/cc/src/: ast.rs  compile.rs  lib.rs  main.rs  parser.rs
crates/dynlib/: Cargo.toml
crates/dynlib/src/: lib.rs
crates/lispy/: Cargo.toml
crates/lispy/src/: ast.rs  compile.rs  lib.rs  main.rs  parser.rs
crates/waffle/: Cargo.toml
crates/waffle/src/: builtin.rs  bytecode.rs  class.rs  ffi.rs  function.rs  indexed_elements.rs  interpreter.rs  jit.rs  lib.rs  linker.rs  load.rs  main.rs  object.rs  opcode.rs  reflect.rs  runtime.rs  structure.rs  value.rs  vm.rs
crates/waffle/src/interpreter/: slow_paths.rs
crates/waffle/src/jit/: compile.rs  stackir.rs
crates/waffle/src/memory/: array.rs  gcwrapper.rs  los.rs  map.rs  minimark.rs  minimarkpage.rs  mod.rs  roots.rs  roots_v2.rs  rose.rs  simple.rs
crates/waffle/src/memory/rose/: gc.rs
crates/waffle/src/memory/rose/gc/: allocator.rs  bitmap.rs  mmap.rs
crates/waffle/src/runtime/: array.rs  float.rs  int.rs  number.rs  object.rs  string.rs
crates/wafflec/: Cargo.toml
crates/wafflec/src/: ast.rs  compile.rs  main.rs  parser.rs
examples/: brainfuck.waffle  brainfuck.wml  currying.wml
src/: builtin.rs  bytecode.rs  lib.rs  main.rs  opcode.rs  reflect.rs  value.rs  vm.rs
src/memory/: gcwrapper.rs  minimark.rs  mod.rs  roots.rs  support.rs
src/memory/tests/: mod.rs
std/: core.waffle  core.wml  ffi.waffle  ffi.wml  fs.waffle  fs.wml  vec.waffle  vec.wml
